Update Contact component and fix Writings spacing

--- a/src/styles/components/Writings.css
+++ b/src/styles/components/Writings.css
@@ -18,7 +18,7 @@
   overflow: hidden;
   text-align: left;
   font-size: 30px;
-  margin-top: 0;
+  margin-top: -80px;
   margin-bottom: 5%;
-  margin-left: 10%;
+  margin-left: 255px;
 }
